# DIY_repository

./: .gitignore  Desktop.ini  README.md
ARM-LINKER/: help.md  readme.md
ARM-LINKER/DAP-Link/Code/: CMSIS-DAP V2.0.rar
ARM-LINKER/Hardware/: 原理图.json
AWTRIX/: readme.md
AWTRIX/AWTRIX2.0/: platformio.ini
AWTRIX/AWTRIX2.0/src/: AWTRIXController.cpp
AWTRIX/Code/AWTRIX2.0--offline/: README.md  platformio.ini
AWTRIX/Code/AWTRIX2.0--original/: platformio.ini
AWTRIX/Hardware/: 控制板原理图.json
AWTRIX/PCB/: Awtrix Finally.pcbdoc  控制板PCB.json
BADUSB/: badusb.uvopt  build.bat  build_log.txt  readme.md
BADUSB/Code/: badusb.hex  badusb.uvproj  key.h
BADUSB/Code/Code/: Key.C  main..c
BADUSB/Code/Public/: DEBUG.C  DEBUG.H
BADUSB/Hardware/: 原理图.json
BADUSB/PCB/: PCB.json
BLUETOOTH_CAR/: Car.code-workspace  Open.bat
BLUETOOTH_CAR/src/MAIN/: global.c  global.h  main.c  main.h
BLUETOOTH_CAR/src/PROJ/: Car.uvoptx  Car.uvprojx
BLUETOOTH_CAR/src/README/: History.txt
CLONE/: readme.md
CLONE/scoppy-pico/Firmware/Code/pico/: CMakeLists.txt  pico-scoppy-cont-sampling.c  pico-scoppy-core0-looper.c  pico-scoppy-ctx.c  pico-scoppy-non-cont-sampling.c  pico-scoppy-pins.h  pico-scoppy-pwm-sig-gen.c  pico-scoppy-samples.c  pico-scoppy-samples.h  pico-scoppy-voltage-range.c  pico-scoppy-voltage-range.h  pico-scoppy.c  pico-scoppy.h  scoppy-local-example.cmake  scoppy-pio.c
CLONE/加热台/: PCB_PCB_PCB恒温加热台_2021-11-21.json  PCB_中层隔热盖板_2021-11-21.json  SCH_物联网加热台_2021-11-21.json
DAP+ST-LINK/: help.md  readme.md
DAP+ST-LINK/Hardware/: PCB.json
DINO/: readme.md
DINO/Code/: Proj.code-workspace
DINO/Hardware/: PCB.json  原理图.json
ESP32_DIAL/: readme.md
ESP32_DIAL/Code/: README.en.md  README.md
ESP32_DIAL/Hardware/: dial外壳 v4.stl  pcb.json  sch.json
Heart_LED/: readme.md
Heart_LED/Code/: Heart_LED.uvopt  Heart_LED.uvproj
Heart_LED/Hardware/: CH552.PcbLib  CH552G.SCHLIB  Heart.PrjPcb  Heart.SchDoc
Heart_LED/__Previews/: Heart.SchDocPreview
MODULE/: readme.md
MODULE/100ASK_BOARD/: EXTEND.DsnWrk  readme.md
MODULE/5V_DC/: readme.md
MODULE/BLE_UART/: readme.md
MODULE/CH552G_DOUBLE_SERIAL/: readme.md
MODULE/CH554_TOUCH/: readme.md
MODULE/EASY_PWM_GEN/: readme.md
MODULE/LED_DISP/: readme.md
MODULE/Relays/: readme.md
MODULE/USB-HC14/: readme.md
MODULE/WCH-Link/: readme.md
MODULE/e-paper/: readme.md
OFFLINE_SPEECH/: readme.md
OFFLINE_SPEECH/Code/: OFFLINE_SPEECH.uvopt  OFFLINE_SPEECH.uvproj  UART.C  UART.H  main.c
OFFLINE_SPEECH/Hardware/: PCB.json  原理图.json
RGB_KEYBOARD/: KEYBOARD.hex  KEYBOARD.uvopt  KEYBOARD.uvproj  readme.md
RGB_KEYBOARD/Code/: KEYBOARD.hex  KEYBOARD.uvopt  KEYBOARD.uvproj
RGB_KEYBOARD/Code-3/: .clang-format  KEYBOARD.uvopt  KEYBOARD.uvproj
RGB_KEYBOARD/Hardware/: PCB-3.json  SCH-3.json  SCH.json
RGB_KEYBOARD/PCB/: PCB.json  原理图.json
RGB_KEYBOARD/genDesc/: genDesc.aps  genDesc.cpp  genDesc.hpp  genDesc.rc  genDesc.sln  genDesc.vcxproj  genDesc.vcxproj.filters  imgui.ini  main_window.cpp  resource.h
SPACEMAN/: readme.md
SPACEMAN/Hardware/: PCB.json  原理图.json
TOYS_PCB/冰墩墩/: 钥匙扣bdd_4.8x5cm.PcbDoc
TOYS_PCB/太极八卦/: 手柄.PcbDoc
(+344 files in other folders)
